--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path_provider: ^2.0.11
   path: ^1.8.2
   permission_handler: ^10.0.1
+  sqflite: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
