--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path: ^1.8.2
   permission_handler: ^10.0.1
   sqflite: ^2.1.0
+  location: ^4.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
