--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   permission_handler: ^10.0.1
   sqflite: ^2.1.0
   location: ^4.4.0
+  google_maps_flutter: ^2.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
